# py-hse-monitoring

./: .env.example  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml  init_db.py  main.py  mediamtx.yml  package-lock.json  pyproject.toml
AI Documentation/: 00-overview.md  01-architecture-flow.md  02-http-reporting.md  03-mqtt-control.md  04-algorithm-capability.md  05-media-channel.md  06-algorithm-task.md  07-end-to-end-flow.md  08-version-notes.md
app/: alarm_types.py  auth.py  config.py  database.py  models.py  schemas.py
app/routers/: __init__.py  ai_boxes.py  ai_tasks.py  alarm_types.py  alarms.py  analytics.py  audit_logs.py  auth.py  camera_status.py  face_database.py  local_videos.py  locations.py  modbus.py  preferences.py  recordings.py  roles.py  storage.py  thresholds.py  tools.py  users.py  video_sources.py  webrtc_proxy.py
app/services/: analytics_sync.py  audit_logger.py  auto_recorder.py  bmapp.py  bmapp_client.py  camera_status.py  gps_history.py  media_sync.py  mediamtx.py  minio_storage.py  rtu_api.py  telegram.py
app/utils/: __init__.py  timezone.py
